# avocadet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  annotate.py  package.xml  pyproject.toml  run.py  setup.py
avocadet_ros/: aruco_detector_3d.py  aruco_tracking.py  detector_node.py
demo/: README.md
docs/: api.md  architecture.md
examples/: demo.py
launch/: aruco_rs.launch.py  aruco_rs_launch.py  bunker_nav.launch.py  bunker_nav_launch.py  detector.launch  detector.launch.py
models/: README.md
msg/: AvocadoDetection.msg  AvocadoDetectionArray.msg  Color.msg
ros2_ws/: README.md
ros2_ws/src/avocadet_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/avocadet_msgs/msg/: AvocadoDetection.msg  AvocadoDetectionArray.msg  BoundingBox.msg
ros2_ws/src/avocadet_ros/: CMakeLists.txt  package.xml
ros2_ws/src/avocadet_ros/avocadet_ros/: __init__.py  detector_node.py
ros2_ws/src/avocadet_ros/launch/: detector.launch.py
scripts/: detector_node.py
src/avocadet/: __init__.py  analyzer.py  detector.py  segmenter.py  stream.py  visualizer.py
src/avocadet_lib/: __init__.py  analyzer.py  cli.py  detector.py  segmenter.py  stream.py  visualizer.py
tests/: test_detector.py
tools/: annotate.py  download_dataset.py  generate_demo.py  save_image.py  test_detection.py  train.py
