<?xml version="1.0"?>
<package format="2">
  <name>avocadet</name>
  <version>1.0.0</version>
  <description>
    Real-time avocado detection, counting, and ripeness analysis for ROS.
    
    This package provides computer vision capabilities for agricultural robotics,
    combining YOLOv8 object detection with color-based segmentation for robust
    fruit identification and ripeness classification.
  </description>

  <maintainer email="aaronjs99@github.com">Aaron JS</maintainer>
  <author email="aaronjs99@github.com">Aaron JS</author>
  <license>MIT</license>

  <url type="website">https://github.com/aaronjs99/avocadet</url>
  <url type="repository">https://github.com/aaronjs99/avocadet</url>
  <url type="bugtracker">https://github.com/aaronjs99/avocadet/issues</url>

  <!-- Build Tools -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <!-- Runtime Dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- Export -->
  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
