[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avocadet"
version = "0.1.0"
description = "Real-time avocado detection, counting, and analysis from livestream video feeds"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "aaronjs99"}
]
keywords = ["avocado", "detection", "computer-vision", "yolo", "livestream", "agriculture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "segment-anything-fast>=0.1.0",
]

[project.optional-dependencies]
sam = [
    "segment-anything>=1.0",
    "transformers>=4.30.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
avocadet = "avocadet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
